Add product-release_info patch endpoint.
