# app/schemas/release_info.py
@@ -6,7 +6,7 @@ from pydantic import BaseModel, Field, NonNegativeInt
 
 class ProductReleaseInfoBase(BaseModel):
     price: Optional[NonNegativeInt] = Field(nullable=True)
-    tax_including: bool = Field(default=False)
+    tax_including: Optional[bool] = Field(nullable=True)
     initial_release_date: Optional[date] = Field(nullable=True)
     adjusted_release_date: Optional[date] = Field(nullable=True)
     announced_at: Optional[date] = Field(nullable=True)
@@ -14,6 +14,7 @@ class ProductReleaseInfoBase(BaseModel):
 
 
 class ProductReleaseInfoCreate(ProductReleaseInfoBase):
+    tax_including: bool = Field(default=False)
     pass
 
 
@@ -22,6 +23,8 @@ class ProductReleaseInfoUpdate(ProductReleaseInfoBase):
 
 
 class ProductReleaseInfoInDB(ProductReleaseInfoBase):
+    tax_including: bool = Field(default=False)
+
     product_id: int
     created_at: datetime
     updated_at: datetime
